--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ feedparser
 django-conneg>=0.3.1
 Django>=1.7,<1.8
 rdflib
-django-hosts
+django-hosts==1.2
 django-celery
 django-object-permissions
 django-guardian
